--- a/src/front/styles/header.css
+++ b/src/front/styles/header.css
@@ -4,13 +4,13 @@
     height: 100vh;
 }
 
-.img-fluid {
+.img-fluid-header {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-.title {
+.titleheader {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -18,17 +18,6 @@
     text-align: center;
     color: white;
     padding: 0 15px;
-}
-
-h1,
-h5 {
-    margin: 10px 0;
-    font-weight: 800;
-    font-size: 4vw;
-}
-
-h3 {
-    font-size: 1.5vw;
 }
 
 button {
@@ -41,7 +30,7 @@ button {
     cursor: pointer;
 }
 
-.card {
+.cardHeader {
     padding: 20px;
     position: absolute;
     left: 50%;
@@ -51,7 +40,7 @@ button {
     width: 90%;
 }
 
-.card-body {
+.card-body-header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -70,15 +59,8 @@ button {
     margin-bottom: 10px;
 }
 
-.card-title {
-    margin-top: 10px;
-    font-size: 1.5vw;
-    position: relative;
-    padding-bottom: 10px;
-    font-weight: 800;
-}
 
-.card-title::after {
+.card-title-Header::after {
     content: '';
     display: block;
     width: 20%;
