modifico varios archivos

--- a/src/front/styles/contact.css
+++ b/src/front/styles/contact.css
@@ -47,6 +47,7 @@ button {
     font-weight: 800;
     border: none;
     cursor: pointer;
+    border-radius: 8px;
 }
 .map-container {
     width: 100%;
