intregracion en la store y creacion de endpoint get customers para dashboard

--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -1,5 +1,6 @@
 .footer{
-    background-color: rgba(0, 0, 0, 0.968)
+    background-color: rgba(0, 0, 0, 0.968);
+    
 }
 .text{
     color: aliceblue;
