--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -1,6 +1,7 @@
 .footer{
     background-color: rgba(0, 0, 0, 0.968);
-    
+    position: sticky;
+    position: relative;
 }
 .text{
     color: aliceblue;
