front de passReset y dasboard de customer

--- a/src/front/styles/passwordReset.css
+++ b/src/front/styles/passwordReset.css
@@ -5,3 +5,9 @@
     height: 100vh; 
 
 }
+.btn-login{
+    background-color: #F2C94C;
+    border-radius: 8px;
+    width: 100%;
+    font-weight: 800;
+}
