--- a/src/front/styles/passwordResetRequest.css
+++ b/src/front/styles/passwordResetRequest.css
@@ -4,3 +4,9 @@
     align-items: start;
 
 }
+.btn-resetPass{
+    background-color: #F2C94C;
+    border-radius: 8px;
+    width: 100%;
+    font-weight: 800;
+}
