--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,8 +5,8 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
-
-.contenedor-page{
+.contenedor-page {
     background-color: #E4E3E3;
-    height: 100%;
+    min-height: 100vh; /* Asegura que cubre toda la pantalla */
 }
+
