--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,6 @@
 /* 
     General Styles used on every website (Don't Repeat Yourself)
 */
+/* index.css */
+
+/* Aseguramos que el body y el html tengan la altura mínima para ocupar toda la pantalla */
